[package]
name = "prom-rules-graph"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
promql = "0.4"
reqwest = "0.11"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
multimap = "0.8"
clap = { version = "4", features = ["derive"] }
